re #125 Fixed scrollbar issue assign #22 to johanjanssens

--- a/code/administrator/templates/default/css/component.css
+++ b/code/administrator/templates/default/css/component.css
@@ -49,7 +49,6 @@ div.message {
 }
 
 .com_dashboard #content-box,
-.com_info #content-box,
 .com_settings #content-box {
 	overflow-y: scroll; /* Fix, force scrollbar */
 }
